--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./server"
   },
   "repository": {
     "type": "git",
@@ -14,6 +15,12 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/iman-ragab/simple-product-system#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "cookie-parser": "~1.4.3",
+    "debug": "~2.6.9",
+    "ejs": "~2.5.7",
+    "http-errors": "~1.6.2",
+    "mongoose": "^5.1.0",
+    "morgan": "~1.9.0"
   }
 }
