--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   "license": "ISC",
   "homepage": "https://bitbucket.org/iman-ragab/simple-product-system#readme",
   "dependencies": {
-    "express": "^4.16.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^5.0.1",
     "ejs": "~2.5.7",
+    "express": "^4.16.3",
     "http-errors": "~1.6.2",
     "mongoose": "^5.1.0",
     "morgan": "~1.9.0"
