generate front-end/angular app

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
-/node_modules
-.env
+# server
+/server/node_modules
+/server/.env
+
+#client
+# compiled output
+/client/dist
+/client/tmp
+/client/out-tsc
+
+# dependencies
+/client/node_modules
+
+
